--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=http://repo.github.io/folder/index.html" />
+</head>
+<body>
+  Hello world.
+</body>
+</html>
